--- a/config-dev.yml
+++ b/config-dev.yml
@@ -1,3 +1,3 @@
 taeseon:
  profile: I'm dev Taeseon 
- comment : Hello! Update Srping Bus dev Spring Cloude 11123123123!
+ comment : Hello! Update Srping Bus dev Spring Cloud      11123123123!
