--- a/config-dev.yml
+++ b/config-dev.yml
@@ -1,3 +1,3 @@
 taeseon:
  profile: I'm dev Taeseon 
- comment : Hello! Update Srping Bus dev Spring Cloud 1111111!!
+ comment : Hello! Jsp Spring Cloud Bus Update!
