--- a/config-dev.yml
+++ b/config-dev.yml
@@ -2,4 +2,4 @@ taeseon:
  profile: I'm dev Taeseon 
  comment: Hello! Jsp Spring Cloud Bus Update!
  microService:
-  id: taeseon-service
+  id: test-service
