--- a/config-dev.yml
+++ b/config-dev.yml
@@ -1,5 +1,5 @@
 taeseon:
  profile: I'm dev Taeseon 
- comment: Hello! Jsp Spring Cloud Bus Update!
+ comment: Hello! Update Taeseon 
  microService:
   id: test-service
